fix: dark mode title color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -92,6 +92,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode.  */
 [data-theme="dark"] {
+  --ifm-heading-color: var(--ifm-color-white)
   --hero-primary: #292d3e;
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
